dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run during [incr Tcl]
dnl installation to configure the system for the local environment.

AC_INIT(itcl/generic/itcl.h)
# RCS: $Id$

AC_CONFIG_AUX_DIR(config)
AC_PREREQ(2.0)

# -----------------------------------------------------------------------
#
#   Set up a new default --prefix.  If a previous installation of
#   [incr Tcl] can be found searching $PATH use that directory.
#
# -----------------------------------------------------------------------

AC_PREFIX_DEFAULT(/usr/local)
AC_PREFIX_PROGRAM(itclsh)

AC_CONFIG_SUBDIRS(itcl itk)


AC_OUTPUT(Makefile,
	chmod +x ${srcdir}/config/install-sh ${srcdir}/config/mkinstalldirs)
